# tdoa-inverse-solver

./: CMakeLists.txt  README.md
include/: solver.h  types.h
src/: main.cpp  solver.cpp
tests/: test_gradient.cpp
